# Basic_Win32_Application

./: ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  CMakeSettings.json  LICENSE  PointerManager.cpp  PointerManager.h  README.md  RandomColorGenerator.cpp  RandomColorGenerator.h  Resource.h  Resources.aps  Resources.rc  WindowProcHandler.cpp  WindowProcHandler.h  main.cpp
